--- a/zh/admin/index.html
+++ b/zh/admin/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en-us">
-<head><script src="/dare.github.io/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=dare.github.io/livereload" data-no-instant defer></script>
+<head><script src="/dare-group/darelzb.github.io/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=dare-group/darelzb.github.io/livereload" data-no-instant defer></script>
   <meta content="noindex" name="robots">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
