--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 <!-- Last Published: March 26, 2025 --><html lang="en-us" >
 
 
-<head><script src="/dare-group/darelzb.github.io/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=dare-group/darelzb.github.io/livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -62,7 +62,7 @@
 
   
 
-  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/vendor-bundle.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/vendor-bundle.min.26c458e6907dc03073573976b7f4044e.css" media="print" onload="this.media='all'">
 
   
   
@@ -208,7 +208,7 @@
   
   
   
-  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/wowchemy.css" />
+  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/wowchemy.37c3129fa572f6de5ff709e6da9888d2.css" />
 
   
   
@@ -271,10 +271,10 @@
 
 
 
-  <link rel="alternate" hreflang="zh" href="http://localhost:1313/dare-group/darelzb.github.io/zh/" />
+  <link rel="alternate" hreflang="zh" href="https://github.com/dare-group/darelzb.github.io/zh/" />
 
-<link rel="alternate" hreflang="en-us" href="http://localhost:1313/dare-group/darelzb.github.io/en/" />
-<link rel="canonical" href="http://localhost:1313/dare-group/darelzb.github.io/en/" />
+<link rel="alternate" hreflang="en-us" href="https://github.com/dare-group/darelzb.github.io/en/" />
+<link rel="canonical" href="https://github.com/dare-group/darelzb.github.io/en/" />
 
 
 
@@ -308,7 +308,7 @@
 
   <meta property="twitter:site" content="@GetResearchDev" />
   <meta property="twitter:creator" content="@GetResearchDev" />
-<meta property="twitter:image" content="http://localhost:1313/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" />
+<meta property="twitter:image" content="https://github.com/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" />
 
 
 
@@ -318,9 +318,9 @@
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="网络空间安全学院Saiin课题组" />
-<meta property="og:url" content="http://localhost:1313/dare-group/darelzb.github.io/en/" />
+<meta property="og:url" content="https://github.com/dare-group/darelzb.github.io/en/" />
 <meta property="og:title" content="网络空间安全学院Saiin课题组" />
-<meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="http://localhost:1313/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="A highly-customizable Hugo research group theme powered by Wowchemy website builder." /><meta property="og:image" content="https://github.com/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" /><meta property="og:locale" content="en-us" />
 
   
 
@@ -334,10 +334,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "http://localhost:1313/dare-group/darelzb.github.io/?q={search_term_string}",
+    "target": "https://github.com/dare-group/darelzb.github.io/?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "http://localhost:1313/dare-group/darelzb.github.io/"
+  "url": "https://github.com/dare-group/darelzb.github.io/"
 }
 </script>
 
@@ -347,14 +347,14 @@
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "@id": "http://localhost:1313/dare-group/darelzb.github.io/",
+  "@id": "https://github.com/dare-group/darelzb.github.io/",
   "name": "网络空间安全学院Saiin课题组",
-  "logo": "http://localhost:1313/dare-group/darelzb.github.io/media/icon_hu_f7eee4fa97025c42.png",
+  "logo": "https://github.com/dare-group/darelzb.github.io/media/icon_hu_f7eee4fa97025c42.png",
   
   
   
   
-  "url": "http://localhost:1313/dare-group/darelzb.github.io/"
+  "url": "https://github.com/dare-group/darelzb.github.io/"
 }
 </script>
 
@@ -409,7 +409,7 @@
   
   
   
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-init.min.js"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-init.min.4fef3e534144e9903491f0cc6527eccd.js"></script>
 
   
 
@@ -712,7 +712,7 @@
               <span>English</span>
             </div>
             
-            <a class="dropdown-item" href="http://localhost:1313/dare-group/darelzb.github.io/zh/" data-target="/dare-group/darelzb.github.io/zh/">
+            <a class="dropdown-item" href="https://github.com/dare-group/darelzb.github.io/zh/" data-target="/dare-group/darelzb.github.io/zh/">
               <span>中文 (简体)</span>
             </a>
             
@@ -868,7 +868,7 @@
   
 
 
-<script src="/dare-group/darelzb.github.io/js/vendor-bundle.min.js"></script>
+<script src="/dare-group/darelzb.github.io/js/vendor-bundle.min.50933d940896e49f984a778650d5f7f5.js"></script>
 
 
 
@@ -962,11 +962,11 @@
   
 
 
-<script src="/dare-group/darelzb.github.io/en/js/wowchemy.min.js"></script>
+<script src="/dare-group/darelzb.github.io/en/js/wowchemy.min.4cfabc1350d9f10818d66615de9c9de8.js"></script>
 
 
 
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-map.js" type="module"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-map.a26e9d2f7238ba5b868384f1c5bc6477.js" type="module"></script>
 
 
 
