--- a/zh/contact/index.html
+++ b/zh/contact/index.html
@@ -3,7 +3,7 @@
 <!-- Last Published: 2025年3月26日 --><html lang="zh-Hans" >
 
 
-<head><script src="/dare-group/darelzb.github.io/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=dare-group/darelzb.github.io/livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -62,7 +62,7 @@
 
   
 
-  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/vendor-bundle.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/vendor-bundle.min.26c458e6907dc03073573976b7f4044e.css" media="print" onload="this.media='all'">
 
   
   
@@ -212,7 +212,7 @@
   
   
   
-  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/wowchemy.css" />
+  <link rel="stylesheet" href="/dare-group/darelzb.github.io/css/wowchemy.37c3129fa572f6de5ff709e6da9888d2.css" />
 
   
   
@@ -281,8 +281,8 @@
 
 
 
-<link rel="alternate" hreflang="zh-Hans" href="http://localhost:1313/dare-group/darelzb.github.io/zh/contact/" />
-<link rel="canonical" href="http://localhost:1313/dare-group/darelzb.github.io/zh/contact/" />
+<link rel="alternate" hreflang="zh-Hans" href="https://github.com/dare-group/darelzb.github.io/zh/contact/" />
+<link rel="canonical" href="https://github.com/dare-group/darelzb.github.io/zh/contact/" />
 
 
 
@@ -316,7 +316,7 @@
 
   <meta property="twitter:site" content="@GetResearchDev" />
   <meta property="twitter:creator" content="@GetResearchDev" />
-<meta property="twitter:image" content="http://localhost:1313/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" />
+<meta property="twitter:image" content="https://github.com/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" />
 
 
 
@@ -324,9 +324,9 @@
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="网络空间安全学院Saiin课题组" />
-<meta property="og:url" content="http://localhost:1313/dare-group/darelzb.github.io/zh/contact/" />
+<meta property="og:url" content="https://github.com/dare-group/darelzb.github.io/zh/contact/" />
 <meta property="og:title" content="Contact | 网络空间安全学院Saiin课题组" />
-<meta property="og:description" content="" /><meta property="og:image" content="http://localhost:1313/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" /><meta property="og:locale" content="zh-Hans" />
+<meta property="og:description" content="" /><meta property="og:image" content="https://github.com/dare-group/darelzb.github.io/media/icon_hu_7613a4a452ac7087.png" /><meta property="og:locale" content="zh-Hans" />
 
   
     <meta
@@ -391,7 +391,7 @@
   
   
   
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-init.min.js"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-init.min.4fef3e534144e9903491f0cc6527eccd.js"></script>
 
   
 
@@ -1010,7 +1010,7 @@
 
 
 <section id="section-markdown" class="home-section wg-markdown  fullscreen" style="padding: 20px 0 20px 0;" >
- <div class="home-section-bg  bg-image" style="background-image: url(&#39;http://localhost:1313/dare-group/darelzb.github.io/media/contact_hu_85793a9d59a7095e.webp&#39;);background-size: cover;background-position: center;filter: brightness(1);">
+ <div class="home-section-bg  bg-image" style="background-image: url(&#39;https://github.com/dare-group/darelzb.github.io/media/contact_hu_85793a9d59a7095e.webp&#39;);background-size: cover;background-position: center;filter: brightness(1);">
    
  </div>
   <div class="container">
@@ -1145,7 +1145,7 @@
   
 
 
-<script src="/dare-group/darelzb.github.io/js/vendor-bundle.min.js"></script>
+<script src="/dare-group/darelzb.github.io/js/vendor-bundle.min.50933d940896e49f984a778650d5f7f5.js"></script>
 
 
 
@@ -1226,7 +1226,7 @@
 <script id="page-data" type="application/json">{"use_headroom":true}</script>
 
 
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-headroom.js" type="module"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-headroom.db4755770454eb63685f8de785c0a172.js" type="module"></script>
 
 
 
@@ -1240,11 +1240,11 @@
   
 
 
-<script src="/dare-group/darelzb.github.io/zh/js/wowchemy.min.js"></script>
+<script src="/dare-group/darelzb.github.io/zh/js/wowchemy.min.35d40556aa9e02f2afbc37dbfabaf3c1.js"></script>
 
 
 
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-map.js" type="module"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-map.a26e9d2f7238ba5b868384f1c5bc6477.js" type="module"></script>
 
 
 
@@ -1277,7 +1277,7 @@
 </div>
 
 
-  <script src="/dare-group/darelzb.github.io/js/wowchemy-publication.js" type="module"></script>
+  <script src="/dare-group/darelzb.github.io/js/wowchemy-publication.9c0e895144aef5a693008b5c5d450147.js" type="module"></script>
 
 
 
